# ANTsTorch

./: pyproject.toml
.github/workflows/: release.yml
docker/: Dockerfile  add_data.dockerfile
