[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antstorch"
version = "0.0.2"
description = "PyTorch-based ANTsX Utilities"
readme = "README.md"
authors = [{name = "Nick Tustison", email = "ntustison@gmail.com"},
           {name = "Brian Avants", email = "stnava@gmail.com"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "antspyx",
    "torch",
    "torchvision",
    "scikit-learn",
    "numpy",
    "requests",
    "statsmodels",
    "matplotlib",
    "jax",
    "optax",
    "jaxopt",
    "normflows @ git+https://github.com/ntustison/normalizing-flows.git@master"
    ]

[tool.setuptools.packages.find]
include = ["antstorch*"]

[project.urls]
"Homepage" = "https://github.com/ANTsX/ANTsTorch"

